feat(engine#455): populate userId/roles in PropagationContext at all createRoot sites
Wire CurrentPrincipal identity (actorId, roles) into PropagationContext
inherited attributes so that identity flows through the entire case
hierarchy via createChild() propagation.

Changes:
- Add createRoot(traceId, attributes) overload to PropagationContext
- CaseHubReactor.buildInstance(): pass identity attrs instead of Map.of()
- CaseContextChangedEventHandler.tryProvision(): reuse case's context
  instead of fresh createRoot() (also fixes traceId loss)
- EmptyWorkerContextProvider: inject CurrentPrincipal, populate identity
- EmptyReactiveWorkerContextProvider: same pattern

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>